# JvpDataScience

./: chapterMatplotlib.py  chapterNumpy.py  chapterPandas.py  plt.ipynb  pyproject.toml
