[project]
name = "jakevanderdatascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.3.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "seaborn>=0.13.2",
    "setuptools>=75.6.0",
    "yahooquery>=2.3.2",
    "yfinance>=0.2.50",
]
